[package]
name = "hlscp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
url = "2.4"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
regex = "1.10"
indicatif = "0.17"
thiserror = "1.0"